fixed translation of the word "file descriptor"

--- a/bash.1
+++ b/bash.1
@@ -957,19 +957,19 @@ EOF を読み込むとコマンドが終了します。
 .B 配列
 を参照) が作られます。
 .I command
-の標準出力は、実行しているシェルのファイルディスクリプタと
+の標準出力は、実行しているシェルのファイル・ディスクリプターと
 パイプによって接続されます。
-このファイルディスクリプタは \fINAME\fP[0] に代入されます。
+このファイル・ディスクリプターは \fINAME\fP[0] に代入されます。
 .I command
-の標準入力は、実行しているシェルのファイルディスクリプタと
+の標準入力は、実行しているシェルのファイル・ディスクリプターと
 パイプによって接続されます。
-このファイルディスクリプタは \fINAME\fP[1] に代入されます。
+このファイル・ディスクリプターは \fINAME\fP[1] に代入されます。
 このパイプは、コマンドで指定されたほかのリダイレクトより先に設けられます
 (後述の
 .SM
 .B リダイレクト
 を参照)。
-ファイルディスクリプタは、標準的な単語展開により、
+ファイル・ディスクリプターは、標準的な単語展開により、
 シェルのコマンドの引数やリダイレクションに指定できます
 コプロセスの実行で生成されたシェルのプロセス ID は、変数
 \fINAME\fP_PID の値になります。
@@ -1581,7 +1581,7 @@ set しても元には戻りません。
 .TP
 .B COPROC
 無名のコプロセス (前述の \fBコプロセス\fP を参照)
-が入出力するファイルディスクリプタを保持する配列変数
+が入出力するファイル・ディスクリプターを保持する配列変数
 (後述の \fB配列\fP 参照) です。
 .TP
 .B DIRSTACK
@@ -1839,22 +1839,22 @@ GNU 標準の \fIcpu-company-system\fP の形式で設定されます。
 は使用されません。
 .TP
 .B BASH_XTRACEFD
-有効なファイルディスクリプタに対応する整数をセットすると、
+有効なファイル・ディスクリプターに対応する整数をセットすると、
 \fBbash\fP は
 .if t \f(CWset -x\fP
 .if n \fIset -x\fP
-が設定されたときに、トレース出力をそのファイルディスクリプタに出力します。
+が設定されたときに、トレース出力をそのファイル・ディスクリプターに出力します。
 .SM
 .B BASH_XTRACEFD
 が unset されるか、新しい値が代入されると、
-ファイルディスクリプタはクローズされます。
+ファイル・ディスクリプターはクローズされます。
 .SM
 .B BASH_XTRACEFD
 を unset するか空文字列を代入すると、
 トレース出力は標準エラー出力に送られます。
 .SM
 .B BASH_XTRACEFD
-に 2 (標準エラー出力のファイルディスクリプタ) を設定して
+に 2 (標準エラー出力のファイル・ディスクリプター) を設定して
 unset すると、標準エラー出力がクローズされてしまうことに
 注意してください。
 .TP
