--- a/bash.1
+++ b/bash.1
@@ -3673,9 +3673,8 @@ and
 各コマンドの最初の単語がクォートされていない場合、
 エイリアスかどうかが確認され、
 エイリアスならばその単語はそのエイリアスのテキストと置換されます。
-The characters \fB/\fP, \fB$\fP, \fB\`\fP, and \fB=\fP and
-any of the shell \fImetacharacters\fP or quoting characters
-listed above may not appear in an alias name.
+\fB/\fP、\fB$\fP、\fB\`\fP、\fB=\fP、シェルの \fIメタ文字 (metacharacters)\fP
+やクォート文字はエイリアス名には使えません。
 エイリアス名と置換されるテキストには、
 シェルの入力として有効なものは何でも含めることができます。
 これには先に挙げた
