translated "RESTRICTED SHELL"

--- a/bash.1
+++ b/bash.1
@@ -9790,7 +9790,7 @@ wait していた最後のプロセスまたはジョブの終了ステータス
 .B \-d
 オプションを使って、組み込みコマンドを追加・削除すること
 .IP \(bu
-using the \fBenable\fP builtin command to enable disabled shell builtins
+組み込みコマンド \fBenable\fP を使って、無効な組み込みコマンドを有効にすること
 .IP \(bu
 組み込みコマンド
 .B command
