translated "BUG REPORTS"

--- a/bash.1
+++ b/bash.1
@@ -9867,8 +9867,7 @@ chet.ramey@case.edu
 バグが最新版の
 .BR bash
 で起こることを確かめてください。
-The latest version is always available from
-\fIftp://ftp.gnu.org/pub/gnu/bash/\fP.
+最新版は \fIftp://ftp.gnu.org/pub/gnu/bash/\fP から入手できます。
 .PP
 本当にバグがあると判断した場合には、
 .I bashbug
