--- a/bash.1
+++ b/bash.1
@@ -9928,6 +9928,6 @@ chet.ramey@case.edu
 .PP
 配列変数は (まだ) エクスポートできません。
 .PP
-There may be only one active coprocess at a time.
+おそらく一度に 1 つのコプロセスしかアクティブにできません。
 .zZ
 .zY
