removed commas and periods from Japanese text
Thanks to R4000 2.2

--- a/bash.1
+++ b/bash.1
@@ -1061,7 +1061,7 @@ NOT を取ったものになります。
 のいずれかで区切って並べ、最後に
 .BR ; ,
 .BR & ,
-.BR <newline> .
+.BR <newline>
 のいずれか (これは省略可能です) を置いたものです。
 .PP
 .\"O Of these list operators,
@@ -1080,7 +1080,7 @@ NOT を取ったものになります。
 の優先順位は同じです。これらの次に、
 .B ;
 と
-.BR & ,
+.BR &
 が同じ優先順位で続きます。
 .PP
 .\"O A sequence of one or more newlines may appear in a \fIlist\fP instead
