--- a/bash.1
+++ b/bash.1
@@ -5708,10 +5708,10 @@ $(\^\fIcommand\fP\|) という形式を用いたときは、
 .\"O is matched.  If the first character following the
 括られた文字のうち任意の 1 文字にマッチします。
 2 つの文字の間にハイフンを入れたものは、
-.I 範囲表現 (range expresion)
+.I 範囲表現 (range expression)
 を表します。ソート順で 2 つの文字の間にある任意の文字と、
 両端の 2 文字がマッチします。
-ソートには現在のロケールの照合順序 (collating sequance)
+ソートには現在のロケールの照合順序 (collating sequence)
 と文字セットが用いられます。
 .B [
 .\"O is a
@@ -6976,7 +6976,7 @@ and
 .PP
 .\"O Unless otherwise specified, primaries that operate on files follow symbolic
 .\"O links and operate on the target of the link, rather than the link itself.
-ほかに指定されていなければ、ファイルに対するプライマリはシンボリッククリンク
+ほかに指定されていなければ、ファイルに対するプライマリはシンボリックリンク
 を辿り、リンク自身ではなくリンク先を対象とします。
 .if t .sp 0.5
 .if n .sp 1
